--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+		<div class="navbar">
+			<a href="#home">Home</a>
+			<a href="#about">About</a>
+			<a href="#services">Services</a>
+			<a href="#big-fountain">Big</a>
+			<a href="#small-fountain">Small</a>
+			<a href="#contact">Contact</a>
+		</div>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section class="intro">
+					<section id="home">
 						<header>
+							<br><br><br>
 							<h1>Шоколадный фонтан в Ташкенте ChocoParty</h1>
 							<p></p>
 							<ul class="actions">
@@ -24,16 +33,20 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/gallery/fulls/fontan9.jpg" alt="" /></span>
+							<div class="gallery">
+								<a class="landscape" top=""><img src="images/gallery/fulls/fontan9.jpg" alt="" /></span>
+							</div>
 						</div>
 					</section>
 
 				<!-- Section -->
-					<section id="first">
+					<section id="about">
 						<header>
+						<br><br><br>
 							<h2>Аренда шоколадного фонтана</h2>
 						</header>
 						<div class="content">
+							<br><br><br>
 							<p><b><i>Уважаемые Дамы и Господа!</i></b></br>Наша компания <b><i>ChocoParty</i></b> рада предложить Вам оригинальный способ сделать Ваш праздник ещё более ярким и незабываемым
 							!</p>
 							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нём циркулирует вкуснейший шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
@@ -44,11 +57,13 @@
 					</section>
 
 				<!-- Section -->
-				<section>
+				<section id="services">
 					<header>
+						<br><br><br>
 						<h2>Наши услуги</h2>
 					</header>
 					<div class="content">
+						<br><br><br>
 						<p><strong>В наши услуги входит:</strong></p>
 						<div class="content">
 							<ul>
@@ -67,11 +82,13 @@
 				</section>
 
 				<!-- Section -->
-					<section>
+					<section id="big-fountain">
 						<header>
+							<br><br><br>
 							<h2>Большой шоколадный фонтан</h2>
 						</header>
 						<div class="content">
+							<br><br><br>
 							<div class="gallery">
 								<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
 							</div>
@@ -86,11 +103,13 @@
 					</section>
 				
 				<!-- Section -->
-				<section>
+				<section id="small-fountain">
 					<header>
+						<br><br><br>
 						<h2>Маленький шоколадный фонтан</h2>
 					</header>
 					<div class="content">
+						<br><br><br>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan18.jpg" class="landscape"><img src="images/gallery/thumbs/fontan18.jpg" alt="" /></a>
 						</div>
@@ -106,11 +125,13 @@
 
 
 				<!-- Section -->
-					<section>
+					<section id="contact">
 						<header>
+							<br><br><br><br>
 							<h2>Свяжитесь с нами</h2>
 						</header>
 						<div class="content">
+							<br><br><br><br>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
