--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<title>Шоколадный фонтан в Ташкенте ChocoParty</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" href="images/logo.png">
 	</head>
 	<body class="is-preload">
 
