Fixing when navbar should get responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body class="is-preload">
 
 		<div class="topnav" id="myTopnav">
-		<a href="#home" class="active" onclick="closeOtherBars()">Домой</a>
+		<a href="#home" class="active" onclick="closeOtherBars()">В начало</a>
 		<a href="#about" onclick="closeOtherBars()">О нас</a>
 		<a href="#services" onclick="closeOtherBars()">Наши услуги</a>
 		<a href="#big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
