Adding language switch

--- a/index_uz.html
+++ b/index_uz.html
@@ -20,9 +20,9 @@
 		<a href="#big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
 		<a href="#small-fountain" onclick="closeOtherBars()">Маленький фонтан</a>
 		<a href="#contact" onclick="closeOtherBars()">Свяжитесь с нами</a>
-		<a href="index_uz.html" class="lang">O'z</a>
+		<a href="index.html" class="lang1">O'z</a>
 		<p class="underline">|</p>
-		<a href="index.html" class="lang1">Ру</a>
+		<a href="index.html" class="lang">Ру</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
