Translating the page to Uzbek

--- a/index_uz.html
+++ b/index_uz.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Шоколадный фонтан в Ташкенте ChocoParty</title>
+		<title>Shokoladli Favvora Toshkentda ChocoParty</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -14,12 +14,12 @@
 	<body class="is-preload">
 
 		<div class="topnav" id="myTopnav">
-		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Наш Логотип" width="40"></a>
-		<a href="#about" onclick="closeOtherBars()">О нас</a>
-		<a href="#services" onclick="closeOtherBars()">Наши услуги</a>
-		<a href="#big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
-		<a href="#small-fountain" onclick="closeOtherBars()">Маленький фонтан</a>
-		<a href="#contact" onclick="closeOtherBars()">Свяжитесь с нами</a>
+		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Bizning logotip" width="40"></a>
+		<a href="#about" onclick="closeOtherBars()">Biz haqida</a>
+		<a href="#services" onclick="closeOtherBars()">Bizning xizmatlarimiz</a>
+		<a href="#big-fountain" onclick="closeOtherBars()">Katta favvora</a>
+		<a href="#small-fountain" onclick="closeOtherBars()">Kichik favvora</a>
+		<a href="#contact" onclick="closeOtherBars()">Aloqa</a>
 		<a href="index.html" class="lang1">O'z</a>
 		<p class="underline">|</p>
 		<a href="index.html" class="lang">Ру</a>
@@ -35,7 +35,7 @@
 					<section id="home">
 						<header>
 							<br><br><br>
-							<h1>Шоколадный фонтан в Ташкенте ChocoParty</h1>
+							<h1>Shokoladli Favvora Toshkentda ChocoParty</h1>
 							<p></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -43,7 +43,7 @@
 						</header>
 						<div class="content">
 							<div class="gallery">
-								<a class="landscape" top="3rem"><img src="images/gallery/fulls/fontan9.jpg" alt="" /></a>
+								<a class="landscape" top="3rem"><img src="images/gallery/fulls/fontan9.jpg" alt="Shokoladli favvoralar" /></a>
 							</div>
 						</div>
 					</section>
@@ -52,14 +52,16 @@
 					<section id="about">
 						<header>
 						<br><br><br>
-							<h2>Аренда шоколадного фонтана</h2>
+							<h2>Shokoladli favvora ijarasi</h2>
 						</header>
 						<div class="content">
 							<br><br><br>
-							<p><b><i>Уважаемые Дамы и Господа!</i></b></br>Наша компания <b><i>ChocoParty</i></b> рада предложить Вам оригинальный способ сделать Ваш праздник ещё более ярким и незабываемым
-							!</p>
-							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нём циркулирует вкуснейший шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
-							<br/>Шоколадный фонтан украсит Вашу свадьбу, день рождения, корпоративную вечеринку, банкет, или другое торжество и оставит у Ваших гостей сладкие и незабываемые воспоминания о Вашем празднике.</p>
+						
+							<p><b><i>Xonimlar va janoblar!</i></b></br>Bizning <b><i>ChocoParty</i></b> kompaniyamiz sizga bayramingizni 
+								yanada yorqinroq va unutilmas qilishning original usulini taklif qilishdan mamnun!
+							</p>
+							<p>Shokoladli favvora nima?<br/><i><b>Shokoladli favvorasi </b></i> - bu haqiqiy favvora, lekin unda suv o'rniga mazali shokolad aylanadi. Fondu printsipiga ko'ra, siz shokoladga turli xil mevalar, pechene, marshmallow va hokazo bo'laklarini botirishingiz mumkin.
+							<br/>Shokolad favvorasi to'y, tug'ilgan kun, korporativ ziyofat, banket yoki boshqa bayramlarni bezatadi va mehmonlaringizga bayramingizning shirin va unutilmas xotiralarini qoldiradi.</p>
 							
 							<span class="image medium"><img src="images/logo.png" alt="Наш Логотип" width="50"></span>
 						</div>
@@ -69,17 +71,17 @@
 				<section id="services">
 					<header>
 						<br><br><br>
-						<h2>Наши услуги</h2>
+						<h2>Bizning hizmatlarimiz</h2>
 					</header>
 					<div class="content">
 						<br><br><br>
-						<p><strong>В наши услуги входит:</strong></p>
+						<p><strong>Bizning xizmatlarimizga quyidagilar kiradi:</strong></p>
 						<div class="content">
 							<ul>
-								<li>доставка, сборка</li>
-								<li>профессиональное обслуживание</li>
-								<li>украшение стола и нарезка фруктов</li>
-								<li>салфетки, шпажки, посуда</li>
+								<li>yetkazib berish, yig'ish</li>
+								<li>professional xizmat</li>
+								<li>stol bezash va mevalarni kesish</li>
+								<li>salfetkalar, sihlar, idishlar</li>
 							</ul>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
@@ -94,7 +96,7 @@
 					<section id="big-fountain">
 						<header>
 							<br><br><br>
-							<h2>Большой шоколадный фонтан</h2>
+							<h2>Katta shokoladli favvora</h2>
 						</header>
 						<div class="content">
 							<br><br><br>
@@ -102,11 +104,11 @@
 								<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
 							</div>
 							<ul class="feature-icons">
-								<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 5 кг.</li>
-								<li class="icon solid fa-layer-group">4 яруса</li>
-								<li class="icon solid fa-arrows-alt-v">Высота - 60 см</li>
-								<li class="icon solid fa-user-friends">Прекрасно подойдёт для торжест с количеством гостей 60 персон и более</li>
-								<li class="icon solid fa-solid fa-money-bill-wave">Стоимость услуги: </li>
+								<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 5 kg.</li>
+								<li class="icon solid fa-layer-group">4 qavat</li>
+								<li class="icon solid fa-arrows-alt-v">Balandligi - 60 sm</li>
+								<li class="icon solid fa-user-friends">60 yoki undan ko'p mehmon bilan bayramlar uchun juda mos keladi</li>
+								<li class="icon solid fa-solid fa-money-bill-wave">Xizmat narxi:</li>
 							</ul>
 						</div>
 					</section>
@@ -115,7 +117,7 @@
 				<section id="small-fountain">
 					<header>
 						<br><br><br>
-						<h2>Маленький шоколадный фонтан</h2>
+						<h2>Kichik shokoladli favvora</h2>
 					</header>
 					<div class="content">
 						<br><br><br>
@@ -123,12 +125,11 @@
 							<a href="images/gallery/fulls/fontan18.jpg" class="landscape"><img src="images/gallery/thumbs/fontan18.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
-							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 2.5 кг.</li>
-							<li class="icon solid fa-layer-group">3 яруса</li>
-							<li class="icon solid fa-arrows-alt-v">Высота - 40 см</li>
-							<li class="icon solid fa-user-friends">Отлично подойдёт для праздников с количеством гостей до 30 персон</li>
-							<li class="icon solid fa-solid fa-money-bill-wave">Стоимость услуги: </li>
-						</ul>
+							<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 2.5 kg.</li>
+							<li class="icon solid fa-layer-group">3 qavat</li>
+							<li class="icon solid fa-arrows-alt-v">Balandligi - 40 sm</li>
+							<li class="icon solid fa-user-friends">30 tagacha mehmon bo'lgan partiyalar uchun juda mos keladi</li>
+							<li class="icon solid fa-solid fa-money-bill-wave">Xizmat narxi:</li>
 					</div>
 				</section>
 
@@ -137,23 +138,22 @@
 					<section id="contact">
 						<header>
 							<br><br><br><br>
-							<h2>Свяжитесь с нами</h2>
+							<h2>Biz bilan bog'laning</h2>
 						</header>
 						<div class="content">
 							<br><br><br><br>
 							<ul class="items">
 								<li>
-									<h3>Email</h3>
+									<h3>Elektron pochta</h3>
 									<a href="#">information@untitled.ext</a>
 								</li>
 								<li>
-									<h3>Телефон</h3>
-									<!-- <a href="#">(000) 000-0000</a> -->
+									<h3>Telefon</h3>
 									+998(90)-0976567
 								</li>
 								<li>
-									<h3>Имя</h3>
-									Темур
+									<h3>Ism</h3>
+									Temur
 								</li>
 								<li>
 									<ul class="icons">
