--- a/index.html
+++ b/index.html
@@ -106,7 +106,41 @@
 								<li class="icon solid fa-layer-group">4 яруса</li>
 								<li class="icon solid fa-arrows-alt-v">Высота - 60 см</li>
 								<li class="icon solid fa-user-friends">Прекрасно подойдёт для торжест с количеством гостей 60 персон и более</li>
-								<li class="icon solid fa-solid fa-money-bill-wave">Стоимость услуги: </li>
+								<div class="fields">
+									<p><strong>Тариф: </strong></p>
+									<div class="field half" style="float: left; width: 50%;">
+										<input type="radio" value="tarif-optima" id="tarif-optima" name="tarif" onclick="updateCostBig()">
+										<label for="tarif-optima">Оптима</label>
+									</div>
+									<div class="field half" style="float: left; width: 50%;">
+										<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif" checked onclick="updateCostBig()">
+										<label for="tarif-maxima">Maxima</label>
+									</div>
+								</div>
+								<div class="fields">
+									<p><strong>Вид шоколада: </strong></p>
+									<div class="field half" style="float: left; width: 50%;">
+										<input type="radio" id="milk" value="milk" name="choco-type" checked onclick="updateCostBig()">
+										<label for="milk">Молочный</label>
+									</div>
+									<div class="field half" style="float: left; width: 50%;">
+										<input type="radio" id="white" value="white" name="choco-type" onclick="updateCostBig()">
+										<label for="white">Белый</label>
+									</div>
+									<div class="field half" style="float: left; width: 50%;">
+										<input type="radio" id="orange" value="orange" name="choco-type" onclick="updateCostBig()">
+										<label for="orange">Апельсиновый</label>
+									</div>
+									<div class="field half" style="float: left; width: 50%;">
+										<input type="radio" id="strawberry" value="strawberry" name="choco-type" onclick="updateCostBig()">
+										<label for="strawberry">Клубничный</label>
+									</div>
+									<div class="field half" style="float: left; width: 50%;">
+										<input type="radio" id="lime" value="lime" name="choco-type" onclick="updateCostBig()">
+										<label for="lime">Лайм</label>
+									</div>
+								</div>
+								<li class="icon solid fa-solid fa-money-bill-wave" id="cost-big">Стоимость услуги: <b>3 900 000</b> сум</li>
 							</ul>
 						</div>
 					</section>
@@ -127,7 +161,41 @@
 							<li class="icon solid fa-layer-group">3 яруса</li>
 							<li class="icon solid fa-arrows-alt-v">Высота - 40 см</li>
 							<li class="icon solid fa-user-friends">Отлично подойдёт для праздников с количеством гостей до 30 персон</li>
-							<li class="icon solid fa-solid fa-money-bill-wave">Стоимость услуги: </li>
+							<div class="fields">
+								<p><strong>Тариф: </strong></p>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" value="tarif-optima" id="tarif-optima" name="tarif-small" onclick="updateCostSmall()">
+									<label for="tarif-optima">Оптима</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif-small" checked onclick="updateCostSmall()">
+									<label for="tarif-maxima">Maxima</label>
+								</div>
+							</div>
+							<div class="fields">
+								<p><strong>Вид шоколада: </strong></p>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="milk" value="milk" name="choco-type-small" checked onclick="updateCostSmall()">
+									<label for="milk">Молочный</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="white" value="white" name="choco-type-small" onclick="updateCostSmall()">
+									<label for="white">Белый</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="orange" value="orange" name="choco-type-small" onclick="updateCostSmall()">
+									<label for="orange">Апельсиновый</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="strawberry" value="strawberry" name="choco-type-small" onclick="updateCostSmall()">
+									<label for="strawberry">Клубничный</label>
+								</div>
+								<div class="field half" style="float: left; width: 50%;">
+									<input type="radio" id="lime" value="lime" name="choco-type-small" onclick="updateCostSmall()">
+									<label for="lime">Лайм</label>
+								</div>
+							</div>
+							<li class="icon solid fa-solid fa-money-bill-wave" id="cost-small">Стоимость услуги: <b>2 500 000</b> сум</li>
 						</ul>
 					</div>
 				</section>
@@ -186,6 +254,74 @@
 				var x = document.getElementById("myTopnav");
 				x.className = "topnav";
 			}
+
+			function numberWithSpaces(x) {
+				return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ");
+			}
+			function updateCostBig() {
+				var tarif = document.getElementsByName('tarif');
+				var choco_type = document.getElementsByName('choco-type');
+				var chosen_tarif = ""
+				var chosen_choco = ""
+				var cost = 0
+				
+				for(i = 0; i < tarif.length; i++) {
+					if(tarif[i].checked){
+						chosen_tarif = tarif[i].value;
+						break;
+					}
+				}
+				for(i = 0; i < choco_type.length; i++) {
+					if(choco_type[i].checked){
+						chosen_choco = choco_type[i].value;
+						break;
+					}
+				}
+				if(chosen_tarif=="tarif-maxima"){
+					cost = 1000000
+				}
+				if(chosen_choco=="milk"){
+					cost += 2900000
+				}
+				else if(chosen_choco=="white" || chosen_choco=="orange" || chosen_choco=="strawberry" || chosen_choco=="lime"){
+					cost += 3200000
+				}
+
+				document.getElementById("cost-big").innerHTML
+							= "Стоимость услуги: "+"<b>"+numberWithSpaces(cost)+"</b> сум";
+        	}
+			function updateCostSmall() {
+				var tarif = document.getElementsByName('tarif-small');
+				var choco_type = document.getElementsByName('choco-type-small');
+				var chosen_tarif = ""
+				var chosen_choco = ""
+				var cost = 0
+				
+				for(i = 0; i < tarif.length; i++) {
+					if(tarif[i].checked){
+						chosen_tarif = tarif[i].value;
+						break;
+					}
+				}
+				for(i = 0; i < choco_type.length; i++) {
+					if(choco_type[i].checked){
+						chosen_choco = choco_type[i].value;
+						break;
+					}
+				}
+				if(chosen_tarif=="tarif-maxima"){
+					cost = 1000000
+				}
+				if(chosen_choco=="milk"){
+					cost += 1500000
+				}
+				else if(chosen_choco=="white" || chosen_choco=="orange" || chosen_choco=="strawberry" || chosen_choco=="lime"){
+					cost += 1700000
+				}
+
+				document.getElementById("cost-small").innerHTML
+							= "Стоимость услуги: "+"<b>"+numberWithSpaces(cost)+"</b> сум";
+        	}
 			</script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
