Adding description to tarifs

--- a/index.html
+++ b/index.html
@@ -108,13 +108,24 @@
 								<li class="icon solid fa-user-friends">Прекрасно подойдёт для торжест с количеством гостей 60 персон и более</li>
 								<div class="fields">
 									<p><strong>Тариф: </strong></p>
-									<div class="field half" style="float: left; width: 50%;">
+									<div class="field half" style="float: left; width: 50%">
 										<input type="radio" value="tarif-optima" id="tarif-optima" name="tarif" onclick="updateCostBig()">
-										<label for="tarif-optima">Оптима</label>
+										<label for="tarif-optima-small">
+											<b>Оптима</b>
+											<br>&#x2022;  5 килограмм лучшего бельгийского шоколада
+											<br>&#x2022;  500 грамм какао масла
+										</label>
 									</div>
-									<div class="field half" style="float: left; width: 50%;">
+									<div class="field half" style="float: left; width: 50%">
 										<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif" checked onclick="updateCostBig()">
-										<label for="tarif-maxima">Maxima</label>
+										<label for="tarif-maxima-small">
+											<b>Maxima</b>
+											<br>&#x2022;  Всё что в тарифе Optima +
+											<br>&#x2022;  1 кг маршмеллоу
+											<br>&#x2022;  5 кг сезонных фруктов
+											<br>&#x2022;  2 кг клубники
+											<br>&#x2022;  + красивая нарезка фруктов
+										</label>
 									</div>
 								</div>
 								<div class="fields">
@@ -163,13 +174,24 @@
 							<li class="icon solid fa-user-friends">Отлично подойдёт для праздников с количеством гостей до 30 персон</li>
 							<div class="fields">
 								<p><strong>Тариф: </strong></p>
-								<div class="field half" style="float: left; width: 50%;">
+								<div class="field half" style="float: left; width: 50%">
 									<input type="radio" value="tarif-optima-small" id="tarif-optima-small" name="tarif-small" onclick="updateCostSmall()">
-									<label for="tarif-optima-small">Оптима</label>
+									<label for="tarif-optima-small">
+										<b>Оптима</b>
+										<br>&#x2022;  2.5 килограмм лучшего бельгийского шоколада
+										<br>&#x2022;  250 грамм какао масла
+									</label>
 								</div>
-								<div class="field half" style="float: left; width: 50%;">
+								<div class="field half" style="float: left; width: 50%">
 									<input type="radio" value="tarif-maxima-small" id="tarif-maxima-small" name="tarif-small" checked onclick="updateCostSmall()">
-									<label for="tarif-maxima-small">Maxima</label>
+									<label for="tarif-maxima-small">
+										<b>Maxima</b>
+										<br>&#x2022;  Всё что в тарифе Optima +
+										<br>&#x2022;  500 грамм маршмеллоу
+										<br>&#x2022;  2.5 кг сезонных фруктов
+										<br>&#x2022;  1 кг клубники
+										<br>&#x2022;  + красивая нарезка фруктов
+									</label>
 								</div>
 							</div>
 							<div class="fields">
