--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href=mailto:info@chocoparty.uz>info@chocoparty.uz</a>
 								</li>
 								<li>
 									<h3>Телефон</h3>
@@ -247,6 +247,7 @@
 								</li>
 								<li>
 									<ul class="icons">
+										<li><a href="https://telegram.me/timyusupov" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
