--- a/index_uz.html
+++ b/index_uz.html
@@ -236,7 +236,7 @@
 							<ul class="items">
 								<li>
 									<h3>Elektron pochta</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">info@chocoparty.uz</a>
 								</li>
 								<li>
 									<h3>Telefon</h3>
