Improving descriptions of tarifs

--- a/index.html
+++ b/index.html
@@ -113,14 +113,15 @@
 										<label for="tarif-optima">
 											<b>Оптима</b>
 											<br>&#x2022;  5 килограмм лучшего бельгийского шоколада
-											<br>&#x2022;  500 грамм какао масла
+											<br>&#x2022;  500 грамм бельгийского какао масла
 										</label>
 									</div>
 									<div class="field half">
 										<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif" checked onclick="updateCostBig()">
 										<label for="tarif-maxima">
-											<b>Maxima</b>
-											<br>&#x2022;  Всё что в тарифе Optima +
+											<b>Максима</b>
+											<br>&#x2022;  5 килограмм лучшего бельгийского шоколада
+											<br>&#x2022;  500 грамм бельгийского какао масла
 											<br>&#x2022;  1 кг маршмеллоу
 											<br>&#x2022;  5 кг сезонных фруктов
 											<br>&#x2022;  2 кг клубники
@@ -179,14 +180,15 @@
 									<label for="tarif-optima-small">
 										<b>Оптима</b>
 										<br>&#x2022;  2.5 килограмм лучшего бельгийского шоколада
-										<br>&#x2022;  250 грамм какао масла
+										<br>&#x2022;  250 грамм бельгийского какао масла
 									</label>
 								</div>
 								<div class="field half">
 									<input type="radio" value="tarif-maxima-small" id="tarif-maxima-small" name="tarif-small" checked onclick="updateCostSmall()">
 									<label for="tarif-maxima-small">
 										<b>Maxima</b>
-										<br>&#x2022;  Всё что в тарифе Optima +
+										<br>&#x2022;  2.5 килограмм лучшего бельгийского шоколада
+										<br>&#x2022;  250 грамм бельгийского какао масла
 										<br>&#x2022;  500 грамм маршмеллоу
 										<br>&#x2022;  2.5 кг сезонных фруктов
 										<br>&#x2022;  1 кг клубники
@@ -248,8 +250,6 @@
 								<li>
 									<ul class="icons">
 										<li><a href="https://telegram.me/timyusupov" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</li>
 							</ul>
