--- a/index_uz.html
+++ b/index_uz.html
@@ -115,14 +115,15 @@
 										<label for="tarif-optima">
 											<b>Optima</b>
 											<br>&#x2022;  5 kg eng yuqori sifatli Belgiya shokoladi
-											<br>&#x2022;  500 gramm kakao moyi
+											<br>&#x2022;  500 gramm Belgiya kakao moyi
 										</label>
 									</div>
 									<div class="field half">
 										<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif" checked onclick="updateCostBig()">
 										<label for="tarif-maxima">
 											<b>Maxima</b>
-											<br>&#x2022;  Optima tarifidagi hammasi +
+											<br>&#x2022;  5 kg eng yuqori sifatli Belgiya shokoladi
+											<br>&#x2022;  500 gramm Belgiya kakao moyi
 											<br>&#x2022;  1 kg marshmellou
 											<br>&#x2022;  5 kg mavsumiy mevalar
 											<br>&#x2022;  2 kg qulupnay
@@ -181,14 +182,15 @@
 									<label for="tarif-optima-small">
 										<b>Optima</b>
 										<br>&#x2022;  2.5 kilogramm eng yuqori sifatli Belgiya shokoladi
-										<br>&#x2022;  250 gramm kakao moyi
+										<br>&#x2022;  250 gramm Belgiya kakao moyi
 									</label>
 								</div>
 								<div class="field half">
 									<input type="radio" value="tarif-maxima-small" id="tarif-maxima-small" name="tarif-small" checked onclick="updateCostSmall()">
 									<label for="tarif-maxima-small">
 										<b>Maxima</b>
-										<br>&#x2022;  Optima tarifidagi hammasi +
+										<br>&#x2022;  2.5 kilogramm eng yuqori sifatli Belgiya shokoladi
+										<br>&#x2022;  250 gramm Belgiya kakao moyi
 										<br>&#x2022;  500 gramm marshmellou
 										<br>&#x2022;  2.5 kg mavsumiy mevalar
 										<br>&#x2022;  1 kg qulupnay
@@ -248,8 +250,7 @@
 								</li>
 								<li>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://telegram.me/timyusupov" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 									</ul>
 								</li>
 							</ul>
