Renaming the pages p1

--- a/uz/index.html
+++ b/uz/index.html
@@ -7,22 +7,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="icon" href="images/logo.png">
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" href="../images/logo.png">
 	</head>
 	<body class="is-preload">
 
 		<div class="topnav" id="myTopnav">
-		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Bizning logotip" width="40"></a>
+		<a href="#home" class="active" onclick="closeOtherBars()"><img src="../images/logo.png" alt="Bizning logotip" width="40"></a>
 		<a href="#about" onclick="closeOtherBars()">Biz haqida</a>
 		<a href="#services" onclick="closeOtherBars()">Bizning xizmatlarimiz</a>
 		<a href="#big-fountain" onclick="closeOtherBars()">Katta favvora</a>
 		<a href="#small-fountain" onclick="closeOtherBars()">Kichik favvora</a>
 		<a href="#contact" onclick="closeOtherBars()">Aloqa</a>
-		<a href="index.html" class="lang1">O'z</a>
+		<a href="../uz/index.html" class="lang1">O'z</a>
 		<p class="underline">|</p>
-		<a href="index.html" class="lang">Ру</a>
+		<a href="../ru/index.html" class="lang">Ру</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
@@ -43,7 +43,7 @@
 						</header>
 						<div class="content">
 							<div class="gallery">
-								<a class="landscape" top="3rem"><img src="images/gallery/fulls/fontan9.jpg" alt="Shokoladli favvoralar" /></a>
+								<a class="landscape" top="3rem"><img src="../images/gallery/fulls/fontan9.jpg" alt="Shokoladli favvoralar" /></a>
 							</div>
 						</div>
 					</section>
@@ -63,7 +63,7 @@
 							<p>Shokoladli favvora nima?<br/><i><b>Shokoladli favvorasi </b></i> - bu haqiqiy favvora, lekin unda suv o'rniga mazali shokolad aylanadi. Fondu printsipiga ko'ra, siz shokoladga turli xil mevalar, pechene, marshmallow va hokazo bo'laklarini botirishingiz mumkin.
 							<br/>Shokolad favvorasi to'y, tug'ilgan kun, korporativ ziyofat, banket yoki boshqa bayramlarni bezatadi va mehmonlaringizga bayramingizning shirin va unutilmas xotiralarini qoldiradi.</p>
 							
-							<span class="image medium"><img src="images/logo.png" alt="Наш Логотип" width="50"></span>
+							<span class="image medium"><img src="../images/logo.png" alt="Наш Логотип" width="50"></span>
 						</div>
 					</section>
 
@@ -84,9 +84,9 @@
 								<li>salfetkalar, sihlar, idishlar</li>
 							</ul>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/fontan8.jpg" class="portrait"><img src="images/gallery/thumbs/fontan8.jpg" alt="" /></a>
+							<a href="../images/gallery/fulls/fontan4.jpg" class="landscape"><img src="../images/gallery/thumbs/fontan4.jpg" alt="" /></a>
+							<a href="../images/gallery/fulls/fontan2.jpg" class="portrait"><img src="../images/gallery/thumbs/fontan2.jpg" alt="" /></a>
+							<a href="../images/gallery/fulls/fontan8.jpg" class="portrait"><img src="../images/gallery/thumbs/fontan8.jpg" alt="" /></a>
 						</div>
 
 					</div>
@@ -101,7 +101,7 @@
 						<div class="content">
 							<br><br><br>
 							<div class="gallery">
-								<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
+								<a href="../images/gallery/fulls/fontan17.jpg" class="landscape"><img src="../images/gallery/thumbs/fontan17.jpg" alt="" /></a>
 							</div>
 							<ul class="feature-icons">
 								<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 5 kg.</li>
@@ -168,7 +168,7 @@
 					<div class="content">
 						<br><br><br>
 						<div class="gallery">
-							<a href="images/gallery/fulls/fontan18.jpg" class="landscape"><img src="images/gallery/thumbs/fontan18.jpg" alt="" /></a>
+							<a href="../images/gallery/fulls/fontan18.jpg" class="landscape"><img src="../images/gallery/thumbs/fontan18.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 2.5 kg.</li>
@@ -344,12 +344,12 @@
 				document.getElementById("cost-small-uz").innerHTML = "Xizmat narxi: "+"<b>"+numberWithSpaces(cost)+"</b> so'm";
         	}
 			</script>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
